# rotation_master

./: .gitignore  .gitmodules  CHANGELOG.md  NOTICE.md  README.md  build_emscripten.sh  rotation_master.html  rotation_master.js  rotation_master.wasm
.github/ISSUE_TEMPLATE/: feature-request.md  issue-report.md  support.md
.github/codeql/: codeql-config.yml
.github/workflows/: cmake.yml  codeql-analysis.yml  coverage.yml  release_emscripten.yml
desktop/: .gitignore  CMakeLists.txt  container.h  converter.cpp  converter.h  main.cpp  run_coverage.sh  ui.cpp
desktop/cmakes/: compile_option.cmake
desktop/gl_helper/: CMakeLists.txt  object_data.cpp  object_data.h  shader.cpp  shader.h  shape.cpp  shape.h  window.cpp  window.h
desktop/matrix/: matrix.cpp  matrix.h
desktop/projection_matrix/: CMakeLists.txt  projection_matrix.cpp
desktop/test/: CMakeLists.txt
desktop/test/gl_helper/: CMakeLists.txt  test_gl_helper.cpp
desktop/test/main/: CMakeLists.txt  test_main.cpp
desktop/test/matrix/: test_matrix.cpp
desktop/test/projection_matrix/: CMakeLists.txt  test_projection_matrix.cpp
desktop/test/transformation_matrix/: CMakeLists.txt  test_projection_matrix.cpp  test_rotation_matrix.cpp  test_transformation_matrix.cpp
desktop/transformation_matrix/: CMakeLists.txt  projection_matrix.h  rotation_matrix.cpp  rotation_matrix.h  transformation_matrix.cpp  transformation_matrix.h
html_template/: shell_minimal.html
src/: CMakeLists.txt  container.h  main.cpp  ui.cpp  ui.h
src/cmakes/: compile_option.cmake
src/gl_helper/: CMakeLists.txt  object_data.h  shader.h  shape.cpp  window.cpp  window.h
src/matrix/: CMakeLists.txt
src/test/: CMakeLists.txt
src/test/gl_helper/: test_gl_helper.cpp
src/test/matrix/: CMakeLists.txt  test_matrix.cpp
src/test/transformation_matrix/: CMakeLists.txt  test_rotation_matrix.cpp  test_transformation_matrix.cpp
src/transformation_matrix/: CMakeLists.txt  projection_matrix.cpp  rotation_matrix.cpp  rotation_matrix.h
